# gca

./: .gitignore  README.md  build_assets.bat  build_samples.bat  build_samples.sh  makefile  todo.md
assets/: README.md  build_assets.bat
games/: README.md  build.bat  gbbs.mk  makefile
games/bustout/: bustout.rgbasm  memory.rgbasm  memory.rgbinc
games/common/: gbbs.mk  utils.rgbinc
games/minesweep/: board.rgbasm  board.rgbinc  counter.rgbasm  counter.rgbinc  cursor.rgbasm  cursor.rgbinc  data.rgbasm  data.rgbinc  game.rgbasm  gamestate.rgbasm  gamestate.rgbinc  gamestate_flag.rgbasm  gamestate_lose.rgbasm  gamestate_newgame.rgbasm  gamestate_play.rgbasm  gamestate_showresults.rgbasm  gamestate_uncover.rgbasm  gamestate_waitfornewgame.rgbasm  gamestate_win.rgbasm  interrupts.rgbasm  main.rgbasm  memory.rgbasm  memory.rgbinc  minesweep.rgbasm  sound.rgbasm  sound.rgbinc  ui.rgbinc  window.rgbasm  window.rgbinc
games/pong/: ai.rgbasm  ai.rgbinc  data.rgbinc  game.rgbasm  game.rgbinc  interrupts.rgbasm  math16.rgbinc  memory.rgbasm  memory.rgbinc  pong.rgbasm  score.rgbasm  score.rgbinc  sound.rgbasm  sound.rgbinc
prebuilt/roms/: base.gb  bg.gb  catch.gb  cgb_bg.gbc  cgb_compatibility.gbc  cgb_cpu_speed.gbc  cgb_dma_gp.gbc  cgb_dma_hb.gbc  cgb_palettes.gbc  cgb_priority.gbc  cgb_sprites.gbc  ch1_continuous.gb  ch1_duty.gb  ch1_envelope.gb  ch1_frequency.gb  ch1_full_test.gb  ch1_length.gb  ch1_simple.gb  ch1_sweep.gb  ch1_volume.gb  ch2_full_test.gb  ch3_full_test.gb  ch3_simple.gb  ch3_waveforms.gb  ch4_example.gb  ch4_full_test.gb  counter_rng.gb  dma.gb  dma_double_sprite.gb  dma_none.gb  first_program.gb  init.gb  input_bg.gb  input_interrupt.gb  input_window.gb  interrupt_trigger.gb  jump_table.gb  jump_table_equivalent.gb  lfsr.gb  mbc_eram.gb  (+31 more)
samples/: README.md  build_samples.bat  build_samples.sh  makefile
samples/base/: main.rgbasm  sample.rgbasm  utils.rgbinc
samples/bg/: sample.rgbasm
samples/catch/: build.bat  build.sh  main.rgbasm  sample.rgbasm  utils.rgbinc
samples/cgb_bg/: build.bat  build.sh  sample.rgbasm  ship.chr  ship.tm1  ship.tm2  utils.rgbinc
samples/cgb_compatibility/: background.tlm  build.bat  build.sh  main.rgbasm  sample.rgbasm  utils.rgbinc
samples/cgb_cpu_speed/: alphabet.chr  sample.rgbasm  utils.rgbinc
samples/cgb_dma/: sample.rgbasm
samples/cgb_dma_gp/: build.sh  sample.rgbasm  ship.pal  ship.prm  utils.rgbinc
samples/dma/: utils.rgbinc  (+1 more)
tools/: README.md  color_picker.html  gbbs.mk
tools/conv/: .gitignore  CMakeLists.txt  cgbconv.cpp  gfxconv.cpp  packetize.cpp  sfcconv.cpp  sgbconv.cpp
(+306 files in other folders)
